--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,7 +1,7 @@
 .header {
     position: relative;
     height: 95vh;
-    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.15)), url("../images/boardroom.jpg");
+    background-image: linear-gradient(to top, rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.05)), url("../images/boardroom.jpg");
     background-size: cover;
     background-position: top;
     &__logo-box {
