--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,7 @@
+@import "abstracts/variables";
 @import "base/base";
 @import "base/animations";
 @import "base/typography";
 @import "layout/header";
+@import "layout/grid";
+@import "base/utilities";
