--- a/css/style.css
+++ b/css/style.css
@@ -78,6 +78,36 @@ body {
   max-width: 114rem;
   background-color: #eee;
   margin: 0 auto; }
+  .row:not(:last-child) {
+    margin-bottom: 8rem; }
+  .row:after {
+    content: "";
+    display: table;
+    clear: both; }
+  .row [class^="col-"] {
+    float: left; }
+    .row [class^="col-"]:not(:last-child) {
+      margin-right: 6rem; }
+
+.col-1-of-2,
+.col-2-of-4 {
+  width: calc((100% - gutter-horizontal) /2); }
+
+.col-1-of-3 {
+  width: calc((100% - 2 * 6rem) /3); }
+
+.col-2-of-3 {
+  width: calc(((100% - 2 * 6rem) /3)*2 + 6rem); }
+
+.col-1-of-4 {
+  width: calc((100% - 3 * 6rem) /4); }
+
+.col-3-of-4 {
+  width: calc(((100% - 3 * 6rem) /4)*3 + (2 * 6rem)); }
 
 .features {
   padding: 8rem; }
+
+.section-about {
+  background-color: #f7f7f7;
+  padding: 25rem 0; }
