--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,7 +1,9 @@
 @import "abstracts/variables";
+@import "abstracts/mixins";
 @import "base/base";
 @import "base/animations";
 @import "base/typography";
 @import "layout/header";
 @import "layout/grid";
 @import "base/utilities";
+@import "pages/home";
