--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -25,3 +25,9 @@ body {
         animation: InFromRight 1s ease-out;
     }
 }
+.heading-secondary{
+  font-size: 3.5rem;
+  text-transform: uppercase;
+  font-weight: 700;
+  color:$color-primary;
+}
