--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,4 +1,4 @@
-$color-primary:#55c57a;
+$color-primary:#B21409;
 $color-primary-light:#7ed56f;
 $color-primary-dark: #28b485;
 $color-gray-dark: #777;
