--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -2,3 +2,16 @@
     padding: 8rem;
 }
 
+.util-center-text {
+  text-align: center;
+}
+
+.util-margin-bottom {
+  &-6 {
+    margin-bottom: 8rem;
+  }
+  &-8 {
+    margin-bottom: 8rem;
+  }
+}
+
