--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,5 +1,7 @@
-.section-about {
+[class^="section-"]{
   background-color:$color-gray-light-1;
-  padding:25rem 0;
+}
+.section-about {
+  padding:10rem 0;
 
 }
